# pxr-boost

./: CMakeLists.txt  LICENSE.txt  README.md  pyproject-dev.toml  pyproject.toml
.github/workflows/: linux.yml  macos.yml  pypi.yml  windows.yml
cmake/: pxr-boost-config.cmake.in
python/: CMakeLists.txt  numpy.hpp
python/numpy/: config.hpp  dtype.hpp  internal.hpp  invoke_matching.hpp  (+5 more)
src/: CMakeLists.txt
src/pxr/boost/: build-workaround.cpp  python.hpp
src/pxr/boost/python/: CMakeLists.txt  arg_from_python.hpp  args.hpp  args_fwd.hpp  back_reference.hpp  base_type_traits.hpp  bases.hpp  borrowed.hpp  build-workaround.cpp  call.hpp  call_method.hpp  cast.hpp  class.hpp  class_fwd.hpp  common.hpp.in  copy_const_reference.hpp  copy_non_const_reference.hpp  data_members.hpp  def.hpp  def_visitor.hpp  default_call_policies.hpp  dict.cpp  dict.hpp  docstring_options.hpp  enum.hpp  errors.cpp  errors.hpp  exception_translator.hpp  exec.cpp  exec.hpp  extract.hpp  handle.hpp  handle_fwd.hpp  has_back_reference.hpp  implicit.hpp  import.cpp  import.hpp  init.hpp  instance_holder.hpp  iterator.hpp  (+65 more)
src/pxr/boost/python/converter/: arg_from_python.hpp  arg_to_python.hpp  arg_to_python_base.cpp  arg_to_python_base.hpp  as_to_python_function.hpp  builtin_converters.cpp  builtin_converters.hpp  constructor_function.hpp  context_result_converter.hpp  convertible_function.hpp  from_python.cpp  from_python.hpp  implicit.hpp  obj_mgr_arg_from_python.hpp  object_manager.hpp  pointer_type_id.hpp  pyobject_traits.hpp  pyobject_type.hpp  pytype_function.hpp  pytype_object_mgr_traits.hpp  registered.hpp  registered_pointee.hpp  registrations.hpp  registry.cpp  registry.hpp  return_from_python.hpp  rvalue_from_python_data.hpp  shared_ptr_deleter.hpp  shared_ptr_from_python.hpp  shared_ptr_to_python.hpp  to_python_function_type.hpp  type_id.cpp
src/pxr/boost/python/detail/: aix_init_module.hpp  api_placeholder.hpp  borrowed_ptr.hpp  caller.hpp  config.hpp  construct.hpp  convertible.hpp  copy_ctor_mutates_rhs.hpp  cv_category.hpp  dealloc.hpp  decorated_type_id.hpp  decref_guard.hpp  def_helper.hpp  def_helper_fwd.hpp  defaults_def.hpp  defaults_gen.hpp  dependent.hpp  destroy.hpp  enable_if.hpp  exception_handler.hpp  force_instantiate.hpp  get_pointer.hpp  if_else.hpp  indirect_traits.hpp  integer_cast.hpp  invoke.hpp  is_auto_ptr.hpp  is_shared_ptr.hpp  is_wrapper.hpp  is_xxx.hpp  make_keyword_range_fn.hpp  map_entry.hpp  mpl_lambda.hpp  msvc_typeinfo.hpp  none.hpp  not_specified.hpp  nullary_function_adaptor.hpp  operator_id.hpp  overloads_fwd.hpp  pointee.hpp  (+25 more)
src/pxr/boost/python/detail/mpl2/: and.hpp  at.hpp  bool.hpp  eval_if.hpp  front.hpp  identity.hpp  if.hpp  int.hpp  not.hpp  or.hpp  pop_front.hpp  push_front.hpp  size.hpp
src/pxr/boost/python/numpy/: config.hpp  dtype.hpp  internal.hpp  invoke_matching.hpp  matrix.hpp  ndarray.hpp  numpy_object_mgr_traits.hpp  scalars.hpp  ufunc.hpp
src/pxr/boost/python/object/: add_to_namespace.hpp  class.cpp  class.hpp  class_detail.hpp  class_metadata.hpp  class_wrapper.hpp  enum.cpp  enum_base.hpp  find_instance.hpp  forward.hpp  function.cpp  function.hpp  function_doc_signature.cpp  function_doc_signature.hpp  function_handle.hpp  function_object.hpp  inheritance.cpp  inheritance.hpp  inheritance_query.hpp  instance.hpp  iterator.cpp  iterator.hpp  iterator_core.hpp  life_support.cpp  life_support.hpp  make_holder.hpp  make_instance.hpp  make_ptr_instance.hpp  pickle_support.cpp  pickle_support.hpp  pointer_holder.hpp  py_function.hpp  stl_iterator.cpp  stl_iterator_core.hpp  value_holder.hpp  value_holder_fwd.hpp
src/pxr/boost/python/src/: dict.cpp  errors.cpp  exec.cpp  import.cpp  list.cpp  long.cpp  module.cpp  object_operators.cpp  object_protocol.cpp  slice.cpp  str.cpp  tuple.cpp  wrapper.cpp
src/pxr/boost/python/src/converter/: arg_to_python_base.cpp  builtin_converters.cpp  from_python.cpp  registry.cpp  type_id.cpp
src/pxr/boost/python/src/numpy/: dtype.cpp  matrix.cpp  ndarray.cpp  numpy.cpp  scalars.cpp  ufunc.cpp
src/pxr/boost/python/src/object/: class.cpp  enum.cpp  function.cpp  function_doc_signature.cpp  inheritance.cpp  iterator.cpp  life_support.cpp  pickle_support.cpp  stl_iterator.cpp
src/pxr/boost/python/suite/indexing/: container_utils.hpp  indexing_suite.hpp  map_indexing_suite.hpp  vector_indexing_suite.hpp
src/pxr/boost/python/suite/indexing/detail/: indexing_suite_detail.hpp
src/pxr/boost/python/test/: a_map_indexing_suite.cpp  aligned_class.cpp  andreas_beyer.cpp  args.cpp  as_to_python_function.cpp  back_reference.cpp  bases.cpp  ben_scott1.cpp  bienstman1.cpp  bienstman2.cpp  bienstman3.cpp  bienstman4.cpp  bienstman5.cpp  borrowed.cpp  builtin_converters.cpp  callbacks.cpp  class.cpp  cltree.cpp  complicated.hpp  const_argument.cpp  copy_ctor_mutates_rhs.cpp  crossmod_exception_a.cpp  crossmod_exception_b.cpp  crossmod_opaque_a.cpp  crossmod_opaque_b.cpp  data_members.cpp  defaults.cpp  destroy_test.cpp  dict.cpp  docstring.cpp  enable_shared_from_this.cpp  enum_ext.cpp  exception_translator.cpp  exec.cpp  extract.cpp  if_else.cpp  implicit.cpp  import_.cpp  indirect_traits_test.cpp  injected.cpp  (+56 more)
src/pxr/boost/python/test/numpy/: dtype.cpp  indexing.cpp  ndarray.cpp  shapes.cpp  templates.cpp  ufunc.cpp
test/: CMakeLists.txt  a_map_indexing_suite.cpp  aligned_class.cpp  aligned_class.py  andreas_beyer.cpp  andreas_beyer.py  args.cpp  args.py  as_to_python_function.cpp  back_reference.cpp  back_reference.py  bases.cpp  ben_scott1.cpp  ben_scott1.py  bienstman1.cpp  bienstman1.py  bienstman2.cpp  bienstman2.py  bienstman3.cpp  bienstman3.py  bienstman4.cpp  bienstman4.py  bienstman5.cpp  bienstman5.py  boost_shared_ptr.cpp  boost_shared_ptr.py  borrowed.cpp  builtin_converters.cpp  callbacks.cpp  callbacks.py  class.cpp  class.py  cltree.cpp  complicated.hpp  const_argument.cpp  const_argument.py  copy_ctor_mutates_rhs.cpp  crossmod_exception.py  crossmod_exception_a.cpp  crossmod_exception_b.cpp  (+128 more)
test/numpy/: dtype.cpp  indexing.cpp  ndarray.cpp  shapes.cpp  templates.cpp  ufunc.cpp
